Wed Aug 19 01:08:34 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* compile.c (NODE_RETURN): fire return event at explicit return.
	  [ruby-dev:38701]

Tue Aug 18 21:00:26 2009  Tanaka Akira  <akr@fsij.org>

	* enumerator.c (enumerator_peek): new method Enumerator#peek.
	  (enumerator_next): don't rewind at end.
	  [ruby-dev:38932]

Tue Aug 18 13:46:14 2009  TAKANO Mitsuhiro (takano32)  <tak@no32.tk>

	* touch test/rdoc/empty.dat to run test_rdoc_parser.rb

Tue Aug 18 11:37:24 2009  wanabe  <s.wanabe@gmail.com>

	* vm_insnhelper.c (vm_call_cfunc): ensure hook c-return.
	  [Bug #1588]

	* test/ruby/test_settracefunc.rb (TestSetTraceFunc#test_raise):
	  follow above.

Tue Aug 18 01:57:00 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* range.c (range_step): treat symbols specially so that iterating
	  over symbols should work like strings.  [ruby-core:24780]

	* range.c (range_each): ditto.

Tue Aug 18 01:21:31 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* range.c (range_each): should honor to_str conversion.

Mon Aug 17 23:45:40 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date/delta.rb: removed require 'date'.  added to_c.

Mon Aug 17 14:35:03 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (lex_get_str, lex_io_gets, rb_parser_compile_string):
	  must be ascii compatible.

Mon Aug 17 10:37:41 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* regparse.c (add_code_range_to_buf0): added with checkdup argument.

	* regparse.c (add_code_range_to_buf): use above.

	* regparse.c (add_code_range0): added with checkdup argument.

	* regparse.c (add_code_range): use above.

	* regparse.c (i_apply_case_fold): don't warn if the duplicate is
	  caused by case folding.

Mon Aug 17 08:31:56 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date/delta.rb: merged from date4.  [experimental]

	* lib/date/delta/parser.*: ditto.

	* lib/date.rb: followed the above changes.

Mon Aug 17 08:19:03 2009  Tadayoshi Funaba  <tadf@dotrb.org>
